Project 7 - First Push
- Added print handler that parses \n strings for printing

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /TylerQuayleMP2/nbproject/private/
 /Test rokr  m/nbproject/private/
 /Project 6/TylerQuayleMP6/nbproject/private/
+/Project 7/TylerQuayleMP7/nbproject/private/
